lib_LTLIBRARIES = libs2argv.la libexecs.la
AM_CFLAGS= -Werror -Wall
libs2argv_la_SOURCES = s2argv.c noshell.c
libexecs_la_SOURCES = s2argv.c
libexecs_la_CPPFLAGS = -DNOCOPY_ONLY
libs2argv_la_LDFLAGS = -version-number 0:1:1
libexecs_la_LDFLAGS = -version-number 0:1:1
include_HEADERS = s2argv.h
man_MANS = s2argv.3 execs.3 system_noshell.3 popen_noshell.3 coprocess.3
